color contrast fixes

--- a/wdd230/ChamberOfCommerce/css/medium.css
+++ b/wdd230/ChamberOfCommerce/css/medium.css
@@ -116,7 +116,7 @@ border-collapse: collapse;
 margin: auto;
 }
 th{
-background-color: #463F3A;
+background-color: #E0AFA0;
 }
 tr,
 th{
