--- a/wdd230/ChamberOfCommerce/css/small.css
+++ b/wdd230/ChamberOfCommerce/css/small.css
@@ -205,7 +205,7 @@ footer a:link {
   color: #000;
 }
 footer a:visited {
-  color: #c76cbc;
+  color: #d151c2;
 }
 footer a:hover {
   color: #fff;
